--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <title>REI</title>
   </head>
   <body>
-    <div id ="main"></div>
+    <div id ="display"></div>
     <div id = "related"></div>
     <div id = "review">Yo</div>
-    <div id = "questions"></div>
+    <div id = "question"></div>
 
     <script src="http://localhost:3005/bundle.js"></script>
     <script src="http://localhost:3002/bundle.js"></script>
