--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
     <div id = "related"></div>
     <div id = "review">Yo</div>
     <div id = "question"></div>
-
-    <script src="http://localhost:3005/bundle.js"></script>
-    <script src="http://localhost:3002/bundle.js"></script>
-    <script src="http://localhost:3001/bundle.js"></script>
-    <script src="http://localhost:3004/bundle.js"></script>
+    <!-- Review -->
+    <script src="http://ec2-34-212-140-67.us-west-2.compute.amazonaws.com/bundle.js"></script>
+    <!-- Display -->
+    <script src="http://ec2-34-219-113-81.us-west-2.compute.amazonaws.com/bundle.js"></script>
+    <!-- Question -->
+    <script src="http://ec2-52-12-238-141.us-west-2.compute.amazonaws.com/bundle.js"></script>
+    <!-- Related Items -->
+    <script src="http://ec2-54-212-185-70.us-west-2.compute.amazonaws.com/bundle.js"></script>
   </body>
 
 
