updated with current ips for SDC

--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,14 @@
 </head>
 
 <body>
-  <div id="display"></div>
+  <div id="display">Welcome to REI</div>
   <div id="related"></div>
-  <div id="review">Yo</div>
+  <div id="review"></div>
   <div id="question"></div>
-  <!-- Review -->
-  <script src="http://ec2-52-33-159-141.us-west-2.compute.amazonaws.com/bundle.js"></script>
-  <!-- Display -->
-  <script src="http://ec2-34-213-37-84.us-west-2.compute.amazonaws.com/bundle.js"></script>
-  <!-- Question -->
-  <script src="http://ec2-54-186-31-137.us-west-2.compute.amazonaws.com/bundle.js"></script>
-  <!-- Related Items -->
-  <script src="http://ec2-52-24-22-173.us-west-2.compute.amazonaws.com/bundle.js"></script>
+  <script src="http://52.10.142.6/bundle.js"></script>
+  <script src="http://54.244.0.175/bundle.js"></script>
+  <script src="http://3.138.228.145/bundle.js"></script>
+  <script src="http://34.208.186.96/bundle.js"></script>
 </body>
 
 
